# container-maker

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  Dockerfile.debug  Makefile  README.main.md  README.md  TODO.md  app.py  architecture.md  commit_message.txt  fixes.md  progress.md  pyproject.toml  requirements.txt  understanding_persistence.md
archive/: app.py  containers.py  handlers.py  kubernetes_resources.py  servicer.py
archive/deployment/: deployment-debug.yaml  deployment.yaml
archive/dockerfiles/deploy/: Dockerfile
demo/: client_demo.ipynb
deployment/: Dockerfile  deployment-debug.yaml  entrypoint.sh
dockerfiles/: Dockerfile  Dockerfile.debug  entrypoint-debug.sh  entrypoint.sh
infra/k8s/development/: Dockerfile.development  development.yaml  entrypoint-development.sh
notes/: nfs_setup.md  progress.md  understanding_persistence.md  usecase.md
scripts/: build.sh  debug-build.sh
scripts/k8s/development/: k8s-development-build.sh  (+2 more)
src/: constants.py  handlers.py  message_brokers.py  servicer.py  utils.py
src/common/: config.py  exceptions.py  utils.py
src/containers/: __init__.py  containers.py
src/grpc/: servicer.py
src/resources/: __init__.py  ingress_manager.py  namespace_manager.py  nfs_manager.py  pod_manager.py  resource_config.py  resource_manager.py  service_manager.py  utils.py  volume_manager.py
tests/grpc/: test_create_container_transformer.py  test_data_transformer.py  test_delete_container_transformer.py  test_get_container_transformer.py  test_list_container_transformer.py  test_save_container_transformer.py
(+53 files in other folders)
