[tool.poetry]
name = "container-maker"
version = "0.1.0"
description = ""
authors = ["Zim95 <shresthanamah@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
ipython = "8.12.0"
kubernetes = "^32.0.1"
docker = "^7.1.0"
paramiko = "^3.5.1"
grpcio = "^1.70.0"
click = "^8.1.8"
jupyter = "^1.1.1"
container-maker-spec = {git = "https://github.com/Zim95/container-maker-spec.git", rev = "main"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
